--- a/addressbook-selenium-tests/test-output/old/Default suite/classes.html
+++ b/addressbook-selenium-tests/test-output/old/Default suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.example.tests.EmptyGroupCreationTests</td>
+<td>com.example.tests.ContactCreationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testNonEmptyGroupCreation</td>
+<td>testNonEmptyContactCreation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testEmptyContactCreation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -34,6 +38,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>testNonEmptyGroupCreation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testEmptyGroupCreation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
