--- a/addressbook-selenium-tests/test-output/old/Default suite/methods.html
+++ b/addressbook-selenium-tests/test-output/old/Default suite/methods.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f5659e">  <td>15/02/15 19:31:25</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.example.tests.EmptyGroupCreationTests@47d384ee]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1164175787</td>   <td></td> </tr>
-<tr bgcolor="afea7d">  <td>15/02/15 19:31:30</td>   <td>4697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyGroupCreationTests.testNonEmptyGroupCreation()[pri:0, instance:com.example.tests.EmptyGroupCreationTests@47d384ee]">testNonEmptyGroupCreation</td> 
-  <td>main@1164175787</td>   <td></td> </tr>
-<tr bgcolor="7cd475">  <td>15/02/15 19:31:31</td>   <td>6377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testNonEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@f5f2bb7]">testNonEmptyGroupCreation</td> 
-  <td>main@1164175787</td>   <td></td> </tr>
-<tr bgcolor="f5659e">  <td>15/02/15 19:31:34</td>   <td>8406</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.tests.EmptyGroupCreationTests@47d384ee]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1164175787</td>   <td></td> </tr>
+<tr bgcolor="7cd475">  <td>15/02/15 21:55:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.example.tests.ContactCreationTest@2d6a9952]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@290658609</td>   <td></td> </tr>
+<tr bgcolor="bfe896">  <td>15/02/15 21:55:55</td>   <td>6144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactCreationTest.testEmptyContactCreation()[pri:0, instance:com.example.tests.ContactCreationTest@2d6a9952]">testEmptyContactCreation</td> 
+  <td>main@290658609</td>   <td></td> </tr>
+<tr bgcolor="bfe896">  <td>15/02/15 21:55:58</td>   <td>9244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactCreationTest.testNonEmptyContactCreation()[pri:0, instance:com.example.tests.ContactCreationTest@2d6a9952]">testNonEmptyContactCreation</td> 
+  <td>main@290658609</td>   <td></td> </tr>
+<tr bgcolor="8760d8">  <td>15/02/15 21:56:01</td>   <td>12155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@64c64813]">testEmptyGroupCreation</td> 
+  <td>main@290658609</td>   <td></td> </tr>
+<tr bgcolor="8760d8">  <td>15/02/15 21:56:02</td>   <td>13556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testNonEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@64c64813]">testNonEmptyGroupCreation</td> 
+  <td>main@290658609</td>   <td></td> </tr>
+<tr bgcolor="7cd475">  <td>15/02/15 21:56:04</td>   <td>15222</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.tests.ContactCreationTest@2d6a9952]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@290658609</td>   <td></td> </tr>
 </table>
